--- a/app/views/shared/_leader_sidebar.html.erb
+++ b/app/views/shared/_leader_sidebar.html.erb
@@ -59,6 +59,36 @@
             <% end %>
           </li>
 
+          <!-- Rejony -->
+          <li>
+            <%= link_to leader_regions_path, class: "group relative flex items-center gap-3 rounded-lg px-3 py-2 text-sm font-medium #{request.path.start_with?('/leader/regions') && !request.path.start_with?('/leader/region_transfers') ? 'bg-[#ecf3ff] text-[#465fff] dark:bg-[#465fff]/10 dark:text-[#7592ff]' : 'text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5'}" do %>
+              <svg class="h-5 w-5 <%= request.path.start_with?('/leader/regions') && !request.path.start_with?('/leader/region_transfers') ? 'fill-[#465fff]' : 'fill-gray-500 group-hover:fill-gray-700 dark:fill-gray-400' %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M3.25 5.5C3.25 4.25736 4.25736 3.25 5.5 3.25H8C9.24264 3.25 10.25 4.25736 10.25 5.5V8C10.25 9.24264 9.24264 10.25 8 10.25H5.5C4.25736 10.25 3.25 9.24264 3.25 8V5.5ZM5.5 4.75C5.08579 4.75 4.75 5.08579 4.75 5.5V8C4.75 8.41421 5.08579 8.75 5.5 8.75H8C8.41421 8.75 8.75 8.41421 8.75 8V5.5C8.75 5.08579 8.41421 4.75 8 4.75H5.5ZM13.75 5.5C13.75 4.25736 14.7574 3.25 16 3.25H18.5C19.7426 3.25 20.75 4.25736 20.75 5.5V8C20.75 9.24264 19.7426 10.25 18.5 10.25H16C14.7574 10.25 13.75 9.24264 13.75 8V5.5ZM16 4.75C15.5858 4.75 15.25 5.08579 15.25 5.5V8C15.25 8.41421 15.5858 8.75 16 8.75H18.5C18.9142 8.75 19.25 8.41421 19.25 8V5.5C19.25 5.08579 18.9142 4.75 18.5 4.75H16ZM3.25 16C3.25 14.7574 4.25736 13.75 5.5 13.75H8C9.24264 13.75 10.25 14.7574 10.25 16V18.5C10.25 19.7426 9.24264 20.75 8 20.75H5.5C4.25736 20.75 3.25 19.7426 3.25 18.5V16ZM5.5 15.25C5.08579 15.25 4.75 15.5858 4.75 16V18.5C4.75 18.9142 5.08579 19.25 5.5 19.25H8C8.41421 19.25 8.75 18.9142 8.75 18.5V16C8.75 15.5858 8.41421 15.25 8 15.25H5.5ZM13.75 16C13.75 14.7574 14.7574 13.75 16 13.75H18.5C19.7426 13.75 20.75 14.7574 20.75 16V18.5C20.75 19.7426 19.7426 20.75 18.5 20.75H16C14.7574 20.75 13.75 19.7426 13.75 18.5V16ZM16 15.25C15.5858 15.25 15.25 15.5858 15.25 16V18.5C15.25 18.9142 15.5858 19.25 16 19.25H18.5C18.9142 19.25 19.25 18.9142 19.25 18.5V16C19.25 15.5858 18.9142 15.25 18.5 15.25H16Z"/>
+              </svg>
+              <span>Rejony</span>
+            <% end %>
+          </li>
+
+          <!-- Transfery -->
+          <li>
+            <%= link_to leader_region_transfers_path, class: "group relative flex items-center gap-3 rounded-lg px-3 py-2 text-sm font-medium #{request.path.start_with?('/leader/region_transfers') ? 'bg-[#ecf3ff] text-[#465fff] dark:bg-[#465fff]/10 dark:text-[#7592ff]' : 'text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5'}" do %>
+              <svg class="h-5 w-5 <%= request.path.start_with?('/leader/region_transfers') ? 'fill-[#465fff]' : 'fill-gray-500 group-hover:fill-gray-700 dark:fill-gray-400' %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M12.2929 4.29289C12.6834 3.90237 13.3166 3.90237 13.7071 4.29289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071C20.3166 13.0976 19.6834 13.0976 19.2929 12.7071L13 6.41421L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L12.2929 4.29289ZM12.2929 11.2929C12.6834 10.9024 13.3166 10.9024 13.7071 11.2929L20.7071 18.2929C21.0976 18.6834 21.0976 19.3166 20.7071 19.7071C20.3166 20.0976 19.6834 20.0976 19.2929 19.7071L13 13.4142L6.70711 19.7071C6.31658 20.0976 5.68342 20.0976 5.29289 19.7071C4.90237 19.3166 4.90237 18.6834 5.29289 18.2929L12.2929 11.2929Z"/>
+              </svg>
+              <span>Transfery</span>
+            <% end %>
+          </li>
+
+          <!-- Raporty regionalne -->
+          <li>
+            <%= link_to leader_regional_reports_path, class: "group relative flex items-center gap-3 rounded-lg px-3 py-2 text-sm font-medium #{request.path.start_with?('/leader/regional_reports') ? 'bg-[#ecf3ff] text-[#465fff] dark:bg-[#465fff]/10 dark:text-[#7592ff]' : 'text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5'}" do %>
+              <svg class="h-5 w-5 <%= request.path.start_with?('/leader/regional_reports') ? 'fill-[#465fff]' : 'fill-gray-500 group-hover:fill-gray-700 dark:fill-gray-400' %>" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6 2C4.89543 2 4 2.89543 4 4V20C4 21.1046 4.89543 22 6 22H18C19.1046 22 20 21.1046 20 20V8.41421C20 7.88378 19.7893 7.37507 19.4142 7L15 2.58579C14.6249 2.21071 14.1162 2 13.5858 2H6ZM6 4H13V7C13 8.10457 13.8954 9 15 9H18V20H6V4ZM15 7V5.41421L17.5858 8H15V7ZM8 12C7.44772 12 7 12.4477 7 13C7 13.5523 7.44772 14 8 14H16C16.5523 14 17 13.5523 17 13C17 12.4477 16.5523 12 16 12H8ZM7 17C7 16.4477 7.44772 16 8 16H13C13.5523 16 14 16.4477 14 17C14 17.5523 13.5523 18 13 18H8C7.44772 18 7 17.5523 7 17Z"/>
+              </svg>
+              <span>Raport regionalny</span>
+            <% end %>
+          </li>
+
           <!-- Zwroty -->
           <li>
             <%= link_to leader_returns_path, class: "group relative flex items-center gap-3 rounded-lg px-3 py-2 text-sm font-medium #{request.path.start_with?('/leader/returns') ? 'bg-[#ecf3ff] text-[#465fff] dark:bg-[#465fff]/10 dark:text-[#7592ff]' : 'text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5'}" do %>
