--- a/app/views/warehouse/leader_shipments/index.html.erb
+++ b/app/views/warehouse/leader_shipments/index.html.erb
@@ -40,6 +40,7 @@
           <th class="px-5 py-3 text-left text-xs font-medium uppercase text-gray-500 dark:text-gray-400">ID</th>
           <th class="px-5 py-3 text-left text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Lider</th>
           <th class="px-5 py-3 text-left text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Paczkomat</th>
+          <th class="px-5 py-3 text-left text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Zawartość</th>
           <th class="px-5 py-3 text-left text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Nr listu</th>
           <th class="px-5 py-3 text-left text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Wysyłka</th>
           <th class="px-5 py-3 text-left text-xs font-medium uppercase text-gray-500 dark:text-gray-400">Data</th>
@@ -54,7 +55,7 @@
           <% end %>
         <% else %>
           <tr>
-            <td colspan="8" class="px-5 py-8 text-center text-sm text-gray-500 dark:text-gray-400">
+            <td colspan="9" class="px-5 py-8 text-center text-sm text-gray-500 dark:text-gray-400">
               Brak wysyłek dla liderów
             </td>
           </tr>
