--- a/app/views/leader/regions/_form.html.erb
+++ b/app/views/leader/regions/_form.html.erb
@@ -6,7 +6,7 @@
     <% if region.errors.any? %>
       <div class="rounded-lg bg-red-50 dark:bg-red-900/20 border border-red-200 dark:border-red-800 p-4 mb-4">
         <h3 class="text-red-800 dark:text-red-400 font-medium mb-2">
-          <%= pluralize(region.errors.count, "błąd", "błędy", "błędów") %> uniemożliwiają zapisanie:
+          <%= pluralize(region.errors.count, "błąd", "błędy") %> uniemożliwiają zapisanie:
         </h3>
         <ul class="list-disc list-inside text-sm text-red-700 dark:text-red-400">
           <% region.errors.full_messages.each do |message| %>
