Link source references in admin shipments and orders index pages
Make donation/order references clickable on /admin/shipments and
leader names clickable on /admin/orders for faster navigation.

--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -50,7 +50,7 @@
                     <%= order.user.first_name[0] %><%= order.user.last_name[0] %>
                   </div>
                   <div class="ml-3">
-                    <p class="text-sm font-medium text-gray-900 dark:text-white"><%= order.user.full_name %></p>
+                    <p class="text-sm font-medium"><%= link_to order.user.full_name, admin_user_path(order.user), class: "text-brand-500 hover:text-brand-600" %></p>
                     <p class="text-xs text-gray-500 dark:text-gray-400"><%= order.user.email %></p>
                   </div>
                 </div>
