--- a/app/views/admin/shipments/index.html.erb
+++ b/app/views/admin/shipments/index.html.erb
@@ -57,7 +57,9 @@
                   </div>
                 <% elsif shipment.donation.present? %>
                   <div>
-                    <p class="text-sm font-medium text-gray-900 dark:text-white">Cegiełka #<%= shipment.donation.id %></p>
+                    <p class="text-sm font-medium text-gray-900 dark:text-white">
+                      <%= link_to "Cegiełka ##{shipment.donation.id}", admin_donation_path(shipment.donation), class: "text-brand-500 hover:text-brand-600" %>
+                    </p>
                     <p class="text-xs text-gray-500 dark:text-gray-400"><%= shipment.donation.full_name %></p>
                   </div>
                 <% end %>
